--- a/static/style.css
+++ b/static/style.css
@@ -75,14 +75,14 @@ h3 {
 .details {
   position: relative;
 }
-.delete {
+.updateLink {
   position: absolute;
   top: 0;
   right: 0;
   border-radius: 50%;
   padding: 8px;
 }
-.delete:hover {
+.updateLink:hover {
   cursor: pointer;
   box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
 }
