--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -7,39 +7,15 @@
 
             <div class="details content">
                 <h2>
-                    <%= blogdata.title %>
+                    <%=blogdata.title %>
                 </h2>
                 <div class="content">
                     <p>
-                        <%= blogdata.content %>
+                        <%=blogdata.content %>
                     </p>
                 </div>
-                <a class="delete" id="<%= blogdata._id %>" data-doc="<%=blogdata._id %>">delete</a>
-
+                <a href="/blog/fetchupdatedata/<%= blogdata._id %>" class="updateLink">update</a>
             </div>
             <%- include ('./partial/footer.ejs') %>
     </body>
-    <script>
-        const deleteDAtaBlog = document.querySelectorAll('.delete');
-
-        deleteDAtaBlog.forEach(list => {
-            //dataset allows us to have access to the data value with <a>
-            const id = list.dataset.doc;
-            const endpoint = `/blog/delete/${id}`;
-
-            //the event listener means when the delete buttion is click delete it data
-            list.addEventListener("click", () => {
-
-                //the fetch is a ajax client based 
-                fetch(endpoint, {
-                    method: "DELETE"
-                }).then(result => result.json())
-
-                    //this responsible for refreshing the browser after deleting data blogs
-                    //   .then(res => window.location.href = "http://localhost:8000/blog/display")
-                    .catch(err => console.log(err))
-            })
-        })
-    </script>
-
 </html>
