--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -4,8 +4,8 @@
       <p>A Net Dev Site</p>
     </div>
     <ul>
-      <li><a href="/redirect/home">Blogs</a></li>
+      <li><a href="/redirect/home">New Blog</a></li>
       <li><a href="/redirect/about">About</a></li>
-      <li><a href="/blog/display">New Blog</a></li>
+      <li><a href="/blog/display">Blogs</a></li>
     </ul>
   </nav>
