--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -14,7 +14,7 @@
                         <%=blogdata.content %>
                     </p>
                 </div>
-                <a href="/blog/fetchupdatedata/<%= blogdata._id %>" class="updateLink">update</a>
+                <a href="/blog/fetch-update/<%= blogdata._id %>" class="updateLink">update</a>
             </div>
             <%- include ('./partial/footer.ejs') %>
     </body>
